[package]
name = "rust-testing-explored-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.rust-testing-explored]
path = ".."

[[bin]]
name = "binary_search"
path = "fuzz_targets/binary_search.rs"
test = false
doc = false
bench = false
